fixed css problem z-index date-incoming-message

--- a/src/app/mainscreen/channel-chat/channel-chat.component.scss
+++ b/src/app/mainscreen/channel-chat/channel-chat.component.scss
@@ -130,7 +130,6 @@
         border-radius: 30px;
         padding: 5px 15px;
         background-color: white;
-        z-index: 1;
     }
 }
 
